--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 <ul class="main-menu">
 
   <li><a href="https://script.google.com/macros/s/AKfycbwW6-1UUOmg1lFCdNqtbOfY5eImYm4pQVXAiFGQp2aA_qJugx4hsZuTAnNw-m4iOFmE/exec" class="btn">PP-1</a><li>
-    <li><a href="https://iacda.github.io/pp1onlineclass/" class="btn">PP-2</a><li>
-      <li><a href="https://iacda.github.io/pp1onlineclass/" class="btn">PP-3</a><li>
-        <li><a href="https://iacda.github.io/pp1onlineclass/" class="btn">D-1ST YEAR</a><li>
-          <li><a href="https://iacda.github.io/pp1onlineclass/" class="btn">D-2nd YEAR</a><li>
-            <li><a href="https://iacda.github.io/pp1onlineclass/" class="btn">D-3rd YEAR</a><li>
-              <li><a href="https://iacda.github.io/pp1onlineclass/" class="btn">D-4th YEAR</a><li>
-                <li><a href="https://iacda.github.io/pp1onlineclass/" class="btn">D-5th YEAR</a><li>
-                  <li><a href="https://iacda.github.io/pp1onlineclass/" class="btn">D-6th YEAR</a><li>
-                    <li><a href="https://iacda.github.io/pp1onlineclass/" class="btn">D-7th YEAR</a><li>
+    <li><a href="" class="btn">PP-2</a><li>
+      <li><a href="" class="btn">PP-3</a><li>
+        <li><a href="" class="btn">D-1ST YEAR</a><li>
+          <li><a href="" class="btn">D-2nd YEAR</a><li>
+            <li><a href="" class="btn">D-3rd YEAR</a><li>
+              <li><a href="" class="btn">D-4th YEAR</a><li>
+                <li><a href="" class="btn">D-5th YEAR</a><li>
+                  <li><a href="" class="btn">D-6th YEAR</a><li>
+                    <li><a href="" class="btn">D-7th YEAR</a><li>
 
 
 </ul>
@@ -353,6 +353,7 @@
     }
 
   </script>
+
 
 
 
