--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <ul class="main-menu">
 
   <li><a href="https://script.google.com/macros/s/AKfycbwW6-1UUOmg1lFCdNqtbOfY5eImYm4pQVXAiFGQp2aA_qJugx4hsZuTAnNw-m4iOFmE/exec" class="btn">PP-1</a><li>
-    <li><a href="" class="btn">PP-2</a><li>
+    <li><a href="https://script.google.com/macros/s/AKfycbwW6-1UUOmg1lFCdNqtbOfY5eImYm4pQVXAiFGQp2aA_qJugx4hsZuTAnNw-m4iOFmE/exec" class="btn">PP-2</a><li>
       <li><a href="" class="btn">PP-3</a><li>
         <li><a href="" class="btn">D-1ST YEAR</a><li>
           <li><a href="" class="btn">D-2nd YEAR</a><li>
@@ -353,6 +353,7 @@
     }
 
   </script>
+
 
 
 
